add folder and file in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 ################################################################################
 
 *.map
+*.suo
+.vs/
+node_modules/
+packages/
+obj/
+bin/
