--- a/src/vsarVSTS-Roll-up-board/.vscode/tasks.json
+++ b/src/vsarVSTS-Roll-up-board/.vscode/tasks.json
@@ -1,13 +1,18 @@
 // A task runner configuration.
 {
-    "version": "0.1.0",
-    "command": "grunt",
-    "isShellCommand": true,
-    "tasks": [
-        {
-            "taskName": "exec:package",
-            "isBuildCommand": true,
-            "problemMatcher": "$msCompile"
-        }
-    ]
+  "version": "0.1.0",
+  "command": "grunt",
+  "isShellCommand": true,
+  "tasks": [
+    {
+      "taskName": "exec:package",
+      "isBuildCommand": true,
+      "problemMatcher": "$msCompile"
+    },
+    {
+      "taskName": "typescript",
+      "isBuildCommand": true,
+      "problemMatcher": "$msCompile"
+    }
+  ]
 }
