--- a/src/vsarVSTS-Roll-up-board/package.json
+++ b/src/vsarVSTS-Roll-up-board/package.json
@@ -1,14 +1,28 @@
 {
+  "scripts": {
+    "copy": "cpx node_modules/telemetryclient/lib/*.* scripts",
+    "build": "npm run copy && npm run lint && npm run clean && webpack --progress --colors --config webpack.config.js --output-path ./dist -p",
+    "package": "tfx extension create  --rev-version",
+    "gallery-publish": "tfx extension publish --rev-version",
+    "clean": "rimraf ./dist && rimraf ./*.vsix",
+    "lint": "tslint -c tslint.json \"scripts/*.ts"
+  },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-copy": "^0.8.2",
-    "grunt-contrib-jasmine": "^0.9.2",
-    "grunt-exec": "^0.4.7",
-    "grunt-typescript": "0.8.0",
-    "jasmine": "^2.4.1",
-    "tfx-cli": "^0.3.30",
-    "tsd": "^0.6.5",
-    "vss-web-extension-sdk": "^1.106.0"
+    "tfx-cli": "^0.4.5",
+    "cpx": "^1.5.0",
+    "jasmine": "^2.5.1",
+    "rimraf": "^2.5.4",
+    "typescript": "^2.1.4",
+    "ts-loader":"^2.0.3",
+    "tslint": "^4.3.1",
+    "tslint-loader": "^3.3.0",
+    "webpack": "^1.14.0"
+  },
+  "dependencies": {
+    "@types/jquery": "^2.0.34",
+    "@types/q": "0.0.32",
+    "vss-web-extension-sdk": "^2.115.0",
+    "applicationinsights-js": "*"
   },
   "name": "rollup",
   "private": true,
