--- a/src/vsarVSTS-Roll-up-board/vsarVSTS-Roll-up-board.csproj
+++ b/src/vsarVSTS-Roll-up-board/vsarVSTS-Roll-up-board.csproj
@@ -41,59 +41,41 @@
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
   </ItemGroup>
   <ItemGroup>
-    <None Include=".vscode\tasks.json" />
-    <Content Include="img\overview_add.png" />
-    <Content Include="img\overview_configure.png" />
-    <Content Include="img\overview_dashboard.png" />
-    <Content Include="img\overview_edit.png" />
-    <Content Include="img\overview_sample.png" />
-    <Content Include="img\unconfigured-small.png" />
-    <Content Include="scripts\ai.1.0.4-build00190.js" />
-    <Content Include="scripts\ai.1.0.4-build00190.min.js" />
-    <Content Include="scripts\VSS.SDK.min.js" />
+    <Content Include="static\configuration.html" />
+    <Content Include="static\css\app.css" />
+    <Content Include="static\images\logo.png" />
+    <Content Include="static\images\overview_add.png" />
+    <Content Include="static\images\overview_configure.png" />
+    <Content Include="static\images\overview_dashboard.png" />
+    <Content Include="static\images\overview_edit.png" />
+    <Content Include="static\images\overview_sample.png" />
+    <Content Include="static\images\unconfigured-small.png" />
+    <Content Include="static\index.html" />
     <Content Include="ThirdPartyNotices.txt" />
-    <Content Include="web.config" />
     <Content Include="mp_terms.md" />
     <Content Include="overview.md" />
-    <Content Include="packages.config" />
-    <None Include="web.Debug.config">
-      <DependentUpon>web.config</DependentUpon>
-    </None>
-    <None Include="web.Release.config">
-      <DependentUpon>web.config</DependentUpon>
-    </None>
+    <Content Include="webpack.config.js" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="css\app.css" />
-    <Content Include="img\logo.png" />
-    <Content Include="configuration.html" />
-    <Content Include="index.html" />
-    <Content Include="scripts\VSS.SDK.js" />
-    <None Include="readme.md" />
     <None Include="package.json" />
   </ItemGroup>
   <ItemGroup>
-    <TypeScriptCompile Include="scripts\ai.1.0.4-build00190.d.ts" />
-    <TypeScriptCompile Include="scripts\app.ts" />
-    <TypeScriptCompile Include="scripts\appWidget.ts" />
     <TypeScriptCompile Include="scripts\configuration.ts" />
     <TypeScriptCompile Include="scripts\isettings.d.ts" />
-    <TypeScriptCompile Include="scripts\ref\rmo.d.ts" />
-    <TypeScriptCompile Include="scripts\ref\tfs.d.ts" />
-    <TypeScriptCompile Include="scripts\ref\vss.d.ts" />
     <TypeScriptCompile Include="scripts\RollUpBoard.ts" />
-    <TypeScriptCompile Include="scripts\TelemetryClient.ts" />
-    <TypeScriptCompile Include="typings\jquery\jquery.d.ts" />
-    <TypeScriptCompile Include="typings\q\q.d.ts" />
-    <TypeScriptCompile Include="typings\knockout\knockout.d.ts" />
-    <TypeScriptCompile Include="typings\requirejs\require.d.ts" />
-    <TypeScriptCompile Include="typings\tsd.d.ts" />
+    <TypeScriptCompile Include="scripts\telemetryClientSettings.ts" />
+    <TypeScriptCompile Include="scripts\WidgetRollUpBoard.ts" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="tsconfig.json" />
+    <Content Include="tslint.json" />
+    <Content Include="typings.json" />
     <None Include="vss-extension.json" />
-    <None Include="gruntfile.js" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include=".vscode\" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\WebApplications\Microsoft.WebApplication.targets" Condition="Exists('$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\WebApplications\Microsoft.WebApplication.targets')" />
   <ProjectExtensions>
