delete telemetryclient from package.json

--- a/src/vsarVSTS-Roll-up-board/package.json
+++ b/src/vsarVSTS-Roll-up-board/package.json
@@ -22,8 +22,7 @@
     "@types/jquery": "^2.0.34",
     "@types/q": "0.0.32",
     "vss-web-extension-sdk": "^2.115.0",
-    "applicationinsights-js": "*",
-    "telemetryclient":"*"
+    "applicationinsights-js": "*"
   },
   "name": "rollup",
   "private": true,
