--- a/src/vsarVSTS-Roll-up-board/package.json
+++ b/src/vsarVSTS-Roll-up-board/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "copy": "cpx node_modules/telemetryclient/lib/*.* scripts",
+    "copy": "cpx node_modules/telemetryclient-team-services-extension/lib/*.* scripts",
     "build": "npm run copy && npm run lint && npm run clean && webpack --progress --colors --config webpack.config.js --output-path ./dist -p",
     "postbuild" : "rimraf ./scripts/telemetryclient.js && rimraf ./scripts/telemetryclient.d.ts",
     "package": "tfx extension create  --rev-version",
@@ -23,7 +23,8 @@
     "@types/jquery": "^2.0.34",
     "@types/q": "0.0.32",
     "vss-web-extension-sdk": "^2.115.0",
-    "applicationinsights-js": "*"
+    "applicationinsights-js": "*",
+    "telemetryclient-team-services-extension":"*"
   },
   "name": "rollup",
   "private": true,
