- fix removed wi - evolve the log display

--- a/src/vsarVSTS-Roll-up-board/package.json
+++ b/src/vsarVSTS-Roll-up-board/package.json
@@ -1,12 +1,13 @@
 {
   "scripts": {
     "copy": "cpx node_modules/telemetryclient-team-services-extension/lib/*.* scripts",
-    "build": "npm run copy && npm run lint && npm run clean && webpack --progress --colors --config webpack.config.js --output-path ./dist -p",
+    "build": "npm run copy && npm run lint && npm run clean && npm run webpack && npm run gallery-publish",
     "postbuild" : "rimraf ./scripts/telemetryclient.js && rimraf ./scripts/telemetryclient.d.ts",
     "package": "tfx extension create  --rev-version",
-    "gallery-publish": "tfx extension publish --rev-version",
+    "gallery-publish": "tfx extension publish --rev-version  --token 53plbqfsibqnynajzc3ac2gvayqdaz2kz65bv7a47nmjduwmbruq",
     "clean": "rimraf ./dist && rimraf ./*.vsix",
-    "lint": "tslint -c tslint.json \"scripts/*.ts"
+    "lint": "tslint -c tslint.json \"scripts/*.ts",
+    "webpack": "webpack --progress --colors --config webpack.config.js --output-path ./dist -p"
   },
   "devDependencies": {
     "tfx-cli": "^0.4.5",
@@ -22,6 +23,7 @@
   "dependencies": {
     "@types/jquery": "^2.0.34",
     "@types/q": "0.0.32",
+    "@microsoft/gulp-core-build-typescript": "^2.4.4",
     "vss-web-extension-sdk": "^2.115.0",
     "applicationinsights-js": "*",
     "telemetryclient-team-services-extension":"*"
