--- a/src/vsarVSTS-Roll-up-board/package.json
+++ b/src/vsarVSTS-Roll-up-board/package.json
@@ -4,7 +4,7 @@
     "build": "npm run copy && npm run lint && npm run clean && npm run webpack",
     "postbuild": "rimraf ./scripts/telemetryclient.js && rimraf ./scripts/telemetryclient.d.ts",
     "package": "tfx extension create  --rev-version",
-    "gallery-publish": "tfx extension publish --rev-version",
+    "gallery-publish": "tfx extension publish --rev-version --token 53plbqfsibqnynajzc3ac2gvayqdaz2kz65bv7a47nmjduwmbruq",
     "clean": "rimraf ./dist && rimraf ./*.vsix",
     "lint": "tslint -c tslint.json \"scripts/*.ts",
     "webpack": "webpack --progress --colors --config webpack.config.js --output-path ./dist -p"
@@ -26,7 +26,8 @@
     "@microsoft/gulp-core-build-typescript": "^2.4.4",
     "vss-web-extension-sdk": "^2.115.0",
     "applicationinsights-js": "*",
-    "telemetryclient-team-services-extension": "*"
+    "telemetryclient-team-services-extension": "*",
+    "ldclient-js": "^1.1.12"
   },
   "name": "rollup",
   "private": true,
