Feature flags with LD v1(VSTS): display logs and enable telemetry (#25)
* add folder and file in gitignore

* ReEnabled the AI telemetry for TFS OnPrem And add links github on manifest json file

* Clen scripts folder by deleting telemetryclient.js

* rename postbuild to post-build

* update gitignore

* update logoi size to 128 * 128

* update logo size with png background

* - add telemetryclient-team-services-extension into dependencies and scripts into package.json
- clean vss-extension.json

* delete token and publish

* update gitignore

* delete personnal info

* Add feature flags LD services

* tokens

* add console log

* disable FF on TFS onpremise

* add semicolon

* add log

* FF display logs

* clean

* default val for on premise

* update var

* clean personnals informations

--- a/src/vsarVSTS-Roll-up-board/package.json
+++ b/src/vsarVSTS-Roll-up-board/package.json
@@ -26,7 +26,8 @@
     "@microsoft/gulp-core-build-typescript": "^2.4.4",
     "vss-web-extension-sdk": "^2.115.0",
     "applicationinsights-js": "*",
-    "telemetryclient-team-services-extension": "*"
+    "telemetryclient-team-services-extension": "*",
+    "ldclient-js": "^1.1.12"
   },
   "name": "rollup",
   "private": true,
