--- a/src/vsarVSTS-Roll-up-board/package.json
+++ b/src/vsarVSTS-Roll-up-board/package.json
@@ -10,22 +10,20 @@
     "webpack": "webpack --progress --colors --config webpack.config.js --output-path ./dist -p"
   },
   "devDependencies": {
+    "tfx-cli": "^0.4.5",
     "cpx": "^1.5.0",
-    "rimraf": "^2.6.2",
-    "tfx-cli": "^0.7.5",
-    "ts-loader": "^6.0.1",
-    "tslint": "^5.16.0",
-    "tslint-loader": "^3.5.3",
-    "typescript": "^3.4.5",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2"
+    "jasmine": "^2.5.1",
+    "rimraf": "^2.5.4",
+    "typescript": "2.3.4",
+    "ts-loader": "^2.0.3",
+    "tslint": "^4.3.1",
+    "tslint-loader": "^3.3.0",
+    "webpack": "^1.14.0"
   },
   "dependencies": {
     "@types/jquery": "^2.0.34",
     "@types/q": "0.0.32",
-    "@microsoft/gulp-core-build-typescript": "^8.1.11",
-    "vss-web-extension-sdk": "^5.141.0",
-    "azure-devops-extension-sdk": "^2.0.8",
+    "vss-web-extension-sdk": "^2.117.0",
     "applicationinsights-js": "*",
     "telemetryclient-team-services-extension": "*",
     "ldclient-js": "^1.1.12",
